web/css/project.css
#board-header {
    display:flex;
    justify-content: space-between;
    align-items: center;
}

#board-header h2 {
    flex-grow: 4;
}

#board-tools {
    display: flex;
    flex-grow:1;
    justify-content: space-around;
}

#board-tools a {
    padding:5px 10px;
    color: #EFEFEF;
    text-decoration: none;
    background-color: rgba(0,0,0,0.6);
    border: 1px solid #EFEFEF;
}

#board {
    display: flex;
    justify-content: space-around;
}

.board-column {
    width: 300px;
    height: 600px;
    background-color: rgba(0,0,0,0.8);
    border: 1px solid #EFEFEF;
    overflow-y: scroll;
}

.board-column h3 {
    margin:0;
    padding-top: 20px;
    padding-bottom: 20px;
    text-align:center;
    background-color: rgba(255, 255, 255, 0.2);
}

.board-card {
    display:flex;
    align-items: center;
    margin:5px;
    border: 1px solid #565656;
    background-color: rgba(255, 255, 255, 0.2);
    color: #EFEFEF;
    text-decoration: none;
}

.board-card .title {
    font-weight: bold;
}

.type-image {
    margin-left:10px;
    margin-right:20px;
}

.type-image img {
    width:48px;
    height:48px;
    background-color: rgba(0,0,0,0.6);
    border-radius:25px;
    border: 1px solid #EFEFEF;
}

#feedback {
    width: 90%;
    margin: auto;
}

#feedback > header > h2 {
    display: flex;
    align-items: center;
}

#feedback > section {
    display:flex;
}

#feedback > section > .infos {
    flex-grow: 1;
}

#feedback > section > .content {
    flex-grow: 4;
}

#feedback > section > .actions {
    flex-grow: 1;
}

